# cautious-chainsaw

./: .env.example  .gitignore  docker-compose.yml
apps/intelligence-layer/: .env.example  .gitignore  Makefile  README.md  conftest.py  docker-compose.test.yml  pyproject.toml
apps/intelligence-layer/migrations/: 001_rag_chunks.sql
apps/intelligence-layer/src/app/: config.py  context.py  dependencies.py  main.py
apps/intelligence-layer/src/app/agents/: __init__.py  base_deps.py  copilot.py  deps.py  digest.py  disclaimers.py  doc_classifier.py  doc_extractor.py  fallback.py  (+11 more)
apps/intelligence-layer/tests/: e2e_copilot_conversation.py  e2e_portfolio_construction.py  e2e_sp500_theme_scoring.py  test_access_scope.py  test_adapters.py  test_analytics_registry.py  test_cache.py  test_cash_drag.py  test_chunking.py  test_circuit_breaker.py  test_citations.py  test_classify_errors.py  test_compaction.py  test_concentration_risk.py  test_config.py  test_context.py  test_context_cache.py  test_conversation_memory.py  test_cost.py  test_cost_accumulator.py  test_degradation.py  test_embeddings.py  test_enqueue.py  test_error_classification.py  test_error_utils.py  test_errors.py  test_health.py  test_hooks.py  test_intelligent_runner.py  test_job_errors.py  test_job_retry.py  test_llm_client.py  test_meeting_summary_helpers.py  test_message_codec.py  test_middleware.py  test_mock_platform.py  test_observability.py  test_platform_client.py  test_platform_models.py  test_portfolio_agent_contracts.py  (+25 more)
apps/intelligence-layer/tests/mocks/: __init__.py  mock_platform_client.py
(+368 files in other folders)
